--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,14 +27,14 @@
 			</intent-filter>
 		</activity>
 
-		<receiver
+		<!-- receiver
 			android:name=".SmsReceiver"
 			android:exported="true"
 			android:permission="android.permission.BROADCAST_SMS">
 			<intent-filter>
 				<action android:name="android.provider.Telephony.SMS_RECEIVED" />
 			</intent-filter>
-		</receiver>
+		</receiver -->
 
 	</application>
 
