receiver is dynamic again

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools">
+	xmlns:tools="http://schemas.android.com/tools"
+	package="cz.iddqd.smslocationping"
+	>
 
 	<uses-permission android:name="android.permission.READ_SMS" />
 	<uses-permission android:name="android.permission.RECEIVE_SMS" />
@@ -27,14 +29,14 @@
 			</intent-filter>
 		</activity>
 
-		<!-- receiver
+		<receiver
 			android:name=".SmsReceiver"
 			android:exported="true"
 			android:permission="android.permission.BROADCAST_SMS">
 			<intent-filter>
 				<action android:name="android.provider.Telephony.SMS_RECEIVED" />
 			</intent-filter>
-		</receiver -->
+		</receiver>
 
 	</application>
 
