* SmsReceiver renamed to SmsPingStaticBroadcastReceiver * MainActivity has it's own dynamic broadcast receiver

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 		</activity>
 
 		<receiver
-			android:name=".SmsReceiver"
+			android:name=".SmsPingStaticBroadcastReceiver"
 			android:exported="true"
 			android:permission="android.permission.BROADCAST_SMS">
 			<intent-filter>
